--- a/Citation Chart Data.ipynb
+++ b/Citation Chart Data.ipynb
@@ -1600,7 +1600,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
